--- a/html/relax.html
+++ b/html/relax.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="img/icon.png">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="../img/icon.png">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Relaxation &hearts; </title>
 </head>
 
@@ -24,7 +24,7 @@
         <div class="gradient-circle"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
